# CMakeVSExamples

./: .gitignore  README.md
CMakeCUDA/: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
CMakeCUDA/CMakeCUDA/: CMakeLists.txt
CMakeCUDA/CMakeCUDA/include/: vecadd.h
CMakeCUDA/CMakeCUDA/src/: main.cpp  vecadd.cu
CMakeVS/: CMakeLists.txt  CMakeSettings.json  README.md
CMakeVS/CMakeVS/: CMakeLists.txt
CMakeVS/CMakeVS/include/: log.hpp
CMakeVS/CMakeVS/src/: main.cpp
